k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flixer-server
  labels:
    app: flixer-server
spec:
  selector:
    matchLabels:
      app: flixer-server
  replicas: 10
  template:
    metadata:
      labels:
        app: flixer-server
    spec:
      containers:
      - name: flixer-server
        image: "jaugustodev/flixer.catalog.docker:latest"
