k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "flixer-server"
  labels:
    app: flixer-server
spec:
  containers:
  - name: flixer-server
    image: "jaugustodev/flixer.catalog.docker:latest"
