k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flixer-server
spec:
  selector:
    app: flixer-server
  type: LoadBalancer
  ports:
  - name: flixer-server
    port: 80
    targetPort: 80
    protocol: TCP
