k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    ingressClassName: "nginx"
spec:
  rules:
  - host: "ingress.flixer.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flixer-service
            port:
              number: 80
